--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react": "16.8.3",
     "react-intl-native": "^2.1.2",
     "react-native": "0.59.8",
-    "react-native-gesture-handler": "^1.2.2",
+    "react-native-code-push": "^5.6.0",
+    "react-native-gesture-handler": "^1.3.0",
     "react-native-iphone-x-helper": "^1.2.1",
+    "react-native-onesignal": "^3.2.14",
     "react-native-status-bar-height": "^2.3.1",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.11.0",
